--- a/_includes/base-layout.njk
+++ b/_includes/base-layout.njk
@@ -10,8 +10,8 @@
 </head>
 <body>
 <header>
-  <a href="/" class="link--home">My Blog</a>
-  <a href="/About" class="link--about">About</a>
+  <a href="{{ '/' | url }}" class="link--home">My Blog</a>
+  <a href="{{ '/About' | url }}" class="link--about">About</a>
 </header>
 <main>
   {{ content | safe }}
