--- a/index.njk
+++ b/index.njk
@@ -1,23 +1,17 @@
 ---
 layout: base-layout.njk
 pagination:
-  data: collections.post
+  data: collections.race
   size: 10
   reverse: true
-  alias: posts
+  alias: races
 ---
-{% for post in posts %}
+{% for post in races %}
   <article>
 
     <h1>
       <a href="{{ post.url | url }}">{{ post.data.title }}</a>
     </h1>
-
-    <time datetime="{{ post.date | dateIso }}">{{ post.date | dateReadable }}</time>
-
-    {% excerpt post %}
-
-    <a href="{{ post.url | url }}">Read more</a>
 
   </article>
 {% endfor %}
