--- a/_includes/base-layout.njk
+++ b/_includes/base-layout.njk
@@ -3,19 +3,19 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Eleventy Blog</title>
+  <title>Eressea Beispielpartie</title>
 
   <link rel="stylesheet" href="{{ '/css/site.css' | url }}">
-  <link href="https://fonts.googleapis.com/css?family=Roboto+Slab:700|Roboto&display=fallback" rel="stylesheet">
+  <!-- link href="https://fonts.googleapis.com/css?family=Roboto+Slab:700|Roboto&display=fallback" rel="stylesheet" -->
 </head>
 <body>
 <header>
-  <a href="{{ '/' | url }}" class="link--home">My Blog</a>
+  <a href="{{ '/' | url }}" class="link--home">Beispielpartie</a>
   <a href="{{ '/About' | url }}" class="link--about">About</a>
 </header>
 <main>
   {{ content | safe }}
 </main>
-<footer>&copy; My Blog</footer>
+<footer>&copy; Eressea PBEM</footer>
 </body>
 </html>
