--- a/css/site.css
+++ b/css/site.css
@@ -10,6 +10,10 @@ body {
   font-family: 'Roboto', sans-serif;
 }
 
+pre {
+  font-size: 16px;
+}
+
 @media screen and (min-width: 768px) {
   body {
     max-width: 768px;
