fix index page not showing titles

--- a/index.njk
+++ b/index.njk
@@ -1,7 +1,7 @@
 ---
 layout: base-layout.njk
 pagination:
-  data: collections.race
+  data: collections.races
   size: 10
   reverse: true
   alias: races
