--- a/_includes/base-layout.njk
+++ b/_includes/base-layout.njk
@@ -11,7 +11,7 @@
 <body>
 <header>
   <a href="{{ '/' | url }}" class="link--home">Beispielpartie</a>
-  <a href="{{ '/About' | url }}" class="link--about">About</a>
+  <a href="{{ '..' | url }}" class="link--up">Up</a>
 </header>
 <main>
   {{ content | safe }}
