fix circular collection bug

--- a/goblins/index.njk
+++ b/goblins/index.njk
@@ -3,7 +3,7 @@ layout: base-layout.njk
 title: Goblins
 tags: ['race']
 pagination:
-  data: collections.goblins
+  data: collections.posts
   size: 10
   reverse: false
   alias: posts
