fixing directory data and tags

--- a/aquarians/index.njk
+++ b/aquarians/index.njk
@@ -1,13 +1,16 @@
 ---
 layout: base-layout.njk
-title: Goblins
+title: Meermenschen
 override:tags: ["race"]
 pagination:
-  data: collections.goblin
+  data: collections.aquarian
   size: 10
   reverse: false
   alias: posts
 ---
+
+<h1>Home of the Aquarian Tutorial!</h1>
+
 {% for post in posts %}
   <article>
 
